# SlicerTomoSAM

./: .gitignore  CMakeLists.txt  README.md  create_embeddings.ipynb
Embeddings/: create_embeddings.ipynb
Embeddings/env/: environment_cpu.yml  environment_gpu.yml
TomoSAM/: CMakeLists.txt  tomosam.py
TomoSAM/Resources/: tomosamLogic.py
TomoSAM/Resources/UI/: tomosam.ui
TomoSAM/tomosamLib/: tomosamLogic.py
env/: environment_cpu.yml  environment_gpu.yml
